--- a/website/application/templates/index.html
+++ b/website/application/templates/index.html
@@ -3,7 +3,10 @@
 {% block title %}Home{% endblock %}
 {% block content %}
 <h1>TEST</h1>
-<button id="test" type="button" class="btn btn-primary">Primary</button>
+<form
+    <button id="test" type="button" class="btn btn-primary">Primary</button>
+<form/>
 
-<script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='index.js')}}"></script>
 {% endblock %}
