--- a/website/application/templates/base.html
+++ b/website/application/templates/base.html
@@ -31,6 +31,20 @@
           </div>
         </nav>
 
+        <div class="alert alert-dismissible alert-light">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <strong>Heads up!</strong> This <a href="#" class="alert-link">alert needs your attention</a>, but it's not super important.
+          {% block messageGrey %}
+          {% endblock %}
+        </div>
+
+        <div class="alert alert-dismissible alert-success">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert message</a>.
+          {% block messageGreen %}
+          {% endblock %}
+        </div>
+      
         <div class="container">
             {% block content %}
             {% endblock %}
