--- a/website/application/templates/base.html
+++ b/website/application/templates/base.html
@@ -4,6 +4,8 @@
         <!-- Required meta tags -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <!-- Bootstrap CSS -->
         <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/minty/bootstrap.min.css" rel="stylesheet" integrity="sha384-4HfFay3AYJnEmbgRzxYWJk/Ka5jIimhB/Fssk7NGT9Tj3rkEChpSxLK0btOGzf2I" crossorigin="anonymous">
         <title>{% block title %}{% endblock %}</title>
@@ -31,6 +33,7 @@
           </div>
         </nav>
 
+        <!--
         <div class="alert alert-dismissible alert-light">
           <button type="button" class="close" data-dismiss="alert">&times;</button>
           <strong>Heads up!</strong> This <a href="#" class="alert-link">alert needs your attention</a>, but it's not super important.
@@ -43,7 +46,7 @@
           <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert message</a>.
           {% block messageGreen %}
           {% endblock %}
-        </div>
+        </div> -->
       
         <div class="container">
             {% block content %}
