WIP: viewing messages on page (kinda) working

--- a/website/application/templates/index.html
+++ b/website/application/templates/index.html
@@ -7,7 +7,7 @@
 {% block messageGreen %}{{session["name"]}} logged in {% endblock %}
 {% endif %}
 
-
+<p id="test">test</p>
 
  <div class="input-group-messagetext">
      <form class="form-inline my-2 my-lg-0">
